# SOD_Homeworks

./: LICENSE  README.md
Homework01/: main.c
Homework02/Date_Statistici/: output.csv  output.txt
Homework02/SOD_Homework02/: CMakeLists.txt  CMakePresets.json
Homework02/SOD_Homework02/SOD_Homework02/: CMakeLists.txt  Generator.cpp  Generator.h  Solver.cpp  Solver.h  main.cpp
Homework03/: SOD Homework 03.ipynb.rename  main.c
